--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     }
   ],
   "require": {
-    "php": ">=5.5.9",
-    "illuminate/support": "^5.5|^6.0|^7.0|^8.0"
+    "php": ">=7.4",
+    "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0"
   },
   "autoload": {
     "files": [
@@ -22,11 +22,6 @@
     ],
     "psr-4": {
       "Torann\\LaravelAsana\\": "src/"
-    }
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "0.4-dev"
     }
   }
 }
