--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "php": ">=7.4",
-    "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0"
+    "illuminate/support": "^7.0|^8.0|^9.0|10.0"
   },
   "autoload": {
     "files": [
