--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
-    "illuminate/support": "^8.0|^9.0|10.0"
+    "php": ">=8.1",
+    "illuminate/support": "^9.0|10.0"
   },
   "autoload": {
     "files": [
