--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "php": ">=8.1",
-    "illuminate/support": "^9.0|10.0"
+    "illuminate/support": "^10.0"
   },
   "autoload": {
     "files": [
